version/0.33/_sources/api/solver/_autosummary/settings/phase_25.rst.txt
:orphan:

.. _phase_25:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_25
    :show-inheritance:

.. rubric:: Methods

========================================   =====================================================

Method                                                                                   Summary

========================================   =====================================================
:ref:`create <create>`                         Create a new instance of the current object type.

:ref:`delete <delete>`                                                  Delete selected objects.

:ref:`rename <rename>`                                                        Rename the object.

:ref:`list <list>`                                                List the names of the objects.

:ref:`list_properties <list_properties>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                    Create a copy of the object.

========================================   =====================================================

.. rubric:: Named object type

:ref:`phase_25_child <phase_25_child>`


.. rubric:: Included in:

======================================================   ==========================================

Parent                                                                                      Summary

======================================================   ==========================================
:ref:`settings_23 <settings_23>`                                 Domain name to define settings on.

:ref:`velocity_inlet_1_child <velocity_inlet_1_child>`       'child_object_type' of velocity_inlet.

======================================================   ==========================================

